// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Card with description 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Card with description
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Card component is a simple container for grouping some relevant information. It’s possible to add title and description. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Card__StyledCard-fdVXSH cIcvap"
          >
            <div
              className="CardHeader__StyledCardHeader-czUPbL dvLhpY"
            >
              <div
                className="CardHeader__StyledHeadingWrapper-fYKzSi kjzQIl"
              >
                <div
                  className="CardHeader__StyledIcon-doXBgu isldQW"
                >
                  <svg
                    className={undefined}
                    fill="currentColor"
                    height="24px"
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "color": undefined,
                        "verticalAlign": "middle",
                      }
                    }
                    viewBox="0 0 24 24"
                    width="24px"
                  >
                    <path
                      d="M17.178 21l-4.104-7.835-4.104 4.104.373 2.612L8.223 21l-1.865-3.358L3 15.777l1.12-1.12 2.611.373 4.104-4.104L3 6.822 4.492 5.33l9.7 2.239 4.105-4.104a1.58 1.58 0 0 1 2.238 0c.62.619.62 1.619 0 2.238l-4.104 4.104 2.239 9.7L17.178 21z"
                    />
                  </svg>
                </div>
                <h2
                  className="Heading__StyledHeading-gucmUp iMNCfy"
                >
                  Card with title & description
                </h2>
              </div>
              <div
                className="CardHeader__StyledSubTitle-gOpdhi itEmg"
              >
                <p
                  className="Text__StyledText-guhEiE kLuVzx"
                >
                  This is a description of the card.
                </p>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Card
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CardHeader
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Airplane /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Card with title & description
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            subTitle
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                This is a description of the card.
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Card
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Card with only content 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Card with only content
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Card component is a simple container for grouping some relevant information. You can add a content to Card. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Card__StyledCard-fdVXSH cIcvap"
          >
            <div
              className="CardContent__StyledCardContent-iBaOYi iGSbob"
            >
              <p
                className="Text__StyledText-guhEiE kLuVzx"
              >
                This is a content of the card.
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Card
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          CardContent
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            This is a content of the card.
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          CardContent
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Card
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Card with sections 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Card with sections
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Card sections allow you to create separate sections in every card when you need to create more advanced content structure. Visit Orbit.Kiwi for more detailed guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Card__StyledCard-fdVXSH cIcvap"
          >
            <div
              className="CardHeader__StyledCardHeader-czUPbL dvLhpY"
            >
              <div
                className="CardHeader__StyledHeadingWrapper-fYKzSi kjzQIl"
              >
                <h2
                  className="Heading__StyledHeading-gucmUp iMNCfy"
                >
                  Card with sections
                </h2>
              </div>
              <div
                className="CardHeader__StyledSubTitle-gOpdhi itEmg"
              >
                <p
                  className="Text__StyledText-guhEiE kLuVzx"
                >
                  This is a description of the card.
                </p>
              </div>
            </div>
            <div
              className="CardSection__StyledCardSection-jTZsPt inFSdU"
            >
              <h3
                className="Heading__StyledHeading-gucmUp iPRwMQ"
              >
                Insert your title here...
              </h3>
              <p
                className="Text__StyledText-guhEiE kLuVzx"
              >
                Insert your content here...
              </p>
            </div>
            <div
              className="CardSection__StyledCardSection-jTZsPt inFSdU"
            >
              <h3
                className="Heading__StyledHeading-gucmUp iPRwMQ"
              >
                Insert your title here...
              </h3>
              <p
                className="Text__StyledText-guhEiE kLuVzx"
              >
                Insert your content here...
              </p>
            </div>
            <div
              className="CardSection__StyledCardSection-jTZsPt inFSdU"
            >
              <h3
                className="Heading__StyledHeading-gucmUp iPRwMQ"
              >
                Insert your title here...
              </h3>
              <p
                className="Text__StyledText-guhEiE kLuVzx"
              >
                Insert your content here...
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Card
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CardHeader
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Card with sections
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            subTitle
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                This is a description of the card.
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          CardSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Heading
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                type
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    title3
                                    "
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                element
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    h3
                                    "
                                  </span>
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Insert your title here...
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Heading
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Insert your content here...
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          CardSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          CardSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Heading
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                type
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    title3
                                    "
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                element
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    h3
                                    "
                                  </span>
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Insert your title here...
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Heading
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Insert your content here...
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          CardSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          CardSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Heading
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                type
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    title3
                                    "
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                element
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    h3
                                    "
                                  </span>
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Insert your title here...
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Heading
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Insert your content here...
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          CardSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Card
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              This is the default configuration of this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Card__StyledCard-fdVXSH cIcvap"
          >
            <div
              className="CardHeader__StyledCardHeader-czUPbL dvLhpY"
            >
              <div
                className="CardHeader__StyledHeadingWrapper-fYKzSi kjzQIl"
              >
                <div
                  className="CardHeader__StyledIcon-doXBgu isldQW"
                >
                  <svg
                    className={undefined}
                    fill="currentColor"
                    height="24px"
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "color": undefined,
                        "verticalAlign": "middle",
                      }
                    }
                    viewBox="0 0 24 24"
                    width="24px"
                  >
                    <path
                      d="M17.178 21l-4.104-7.835-4.104 4.104.373 2.612L8.223 21l-1.865-3.358L3 15.777l1.12-1.12 2.611.373 4.104-4.104L3 6.822 4.492 5.33l9.7 2.239 4.105-4.104a1.58 1.58 0 0 1 2.238 0c.62.619.62 1.619 0 2.238l-4.104 4.104 2.239 9.7L17.178 21z"
                    />
                  </svg>
                </div>
                <h2
                  className="Heading__StyledHeading-gucmUp iMNCfy"
                >
                  Card with title
                </h2>
              </div>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Card
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CardHeader
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Airplane /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Card with title
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            subTitle
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#777",
                                    }
                                  }
                                >
                                  null
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Card
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div
            className="Card__StyledCard-fdVXSH cIcvap"
          >
            <div
              className="CardHeader__StyledCardHeader-czUPbL dvLhpY"
            >
              <div
                className="CardHeader__StyledHeadingWrapper-fYKzSi kjzQIl"
              >
                <div
                  className="CardHeader__StyledIcon-doXBgu isldQW"
                >
                  <svg
                    className={undefined}
                    fill="currentColor"
                    height="24px"
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "color": undefined,
                        "verticalAlign": "middle",
                      }
                    }
                    viewBox="0 0 24 24"
                    width="24px"
                  >
                    <path
                      d="M17.178 21l-4.104-7.835-4.104 4.104.373 2.612L8.223 21l-1.865-3.358L3 15.777l1.12-1.12 2.611.373 4.104-4.104L3 6.822 4.492 5.33l9.7 2.239 4.105-4.104a1.58 1.58 0 0 1 2.238 0c.62.619.62 1.619 0 2.238l-4.104 4.104 2.239 9.7L17.178 21z"
                    />
                  </svg>
                </div>
                <h2
                  className="Heading__StyledHeading-gucmUp iMNCfy"
                >
                  Customisable card title
                </h2>
              </div>
              <div
                className="CardHeader__StyledSubTitle-gOpdhi itEmg"
              >
                <p
                  className="Text__StyledText-guhEiE kLuVzx"
                >
                  This is a customisable description of the card.
                </p>
              </div>
            </div>
            <div
              className="CardContent__StyledCardContent-iBaOYi iGSbob"
            >
              <h3
                className="Heading__StyledHeading-gucmUp iPRwMQ"
              >
                Content with Heading and text
              </h3>
              <p
                className="Text__StyledText-guhEiE kLuVzx"
              >
                Text in content
              </p>
            </div>
            <div
              className="CardSection__StyledCardSection-jTZsPt inFSdU"
            >
              <h3
                className="Heading__StyledHeading-gucmUp iPRwMQ"
              >
                Section with Heading and text
              </h3>
              <p
                className="Text__StyledText-guhEiE kLuVzx"
              >
                Text in section
              </p>
            </div>
          </div>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Card
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            closable
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onClose
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  Close()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        CardHeader
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Airplane /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            title
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Customisable card title
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            subTitle
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                This is a customisable description of the card.
                                "
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          CardContent
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Heading
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                type
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    title3
                                    "
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                element
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    h3
                                    "
                                  </span>
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Content with Heading and text
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Heading
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Text in content
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          CardContent
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          CardSection
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Heading
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                type
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    title3
                                    "
                                  </span>
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                element
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    "
                                    h3
                                    "
                                  </span>
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Section with Heading and text
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Heading
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;
                            Text
                          </span>
                          <span />
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 63,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            Text in section
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#777",
                              }
                            }
                          >
                            &lt;/
                            Text
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          CardSection
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        Card
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
